# chrome-devtools-mcp-fork

./: .dxtignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  claude-code-mcp-config.json  fix-package-issues.md  fix-package.md  issue-body.md  manifest.json  pyproject.toml  requirements.txt  server.py  start_chrome_fix.md  test_devtools_server.py  test_mcp_functions.py
.github/workflows/: build-extension.yml  ci-tests.yml  publish.yml  pypi-release.yml
chrome_devtools_mcp_fork/: __init__.py  __main__.py  cdp_context.py  client.py  main.py  run_server.py
chrome_devtools_mcp_fork/tools/: __init__.py  browser.py  chrome_management.py  console.py  css.py  dom.py  network.py  performance.py  storage.py  utils.py
chrome_devtools_mcp_fork/utils/: __init__.py  helpers.py
docs/: TOOLS.md  browser_protocol.json  js_protocol.json
src/: __init__.py  cdp_context.py  client.py  main.py
src/tools/: __init__.py  chrome_management.py  console.py  css.py  dom.py  network.py  performance.py  storage.py  utils.py
tests/: test_core_imports.py  test_distribution.py  test_mcp_compliance.py  test_performance_security.py
