[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-devtools-mcp-fork"
version = "1.0.6"
description = "Chrome DevTools Protocol integration for Model Context Protocol"
authors = [
    {name = "withLinda13"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "chrome", "devtools", "debugging", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/withLinda/chrome-devtools-mcp-fork"
Repository = "https://github.com/withLinda/chrome-devtools-mcp-fork.git"
Issues = "https://github.com/withLinda/chrome-devtools-mcp-fork/issues"

[project.scripts]
chrome-devtools-mcp-fork = "chrome_devtools_mcp_fork.main:main"

[tool.setuptools]
package-dir = {"chrome_devtools_mcp_fork" = "src"}
packages = ["chrome_devtools_mcp_fork", "chrome_devtools_mcp_fork.tools"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
